# potato-agent

./: .gitignore  README.md
src/potato_core/: CMakeLists.txt  package.xml
src/potato_core/scripts/: test_cancel.py  test_concurrency.py  test_none_stream.py  test_react_agent.py  test_reasoning.py  test_stream.py  test_timeout.py
src/potato_core/src/: llmi_node.cpp
src/potato_input/: CMakeLists.txt  package.xml
src/potato_input/src/: input_node.cpp
src/potato_interface/: CMakeLists.txt  package.xml
src/potato_interface/action/: CallOutput.action  Chat.action  Output.action
src/potato_interface/msg/: ChatMessage.msg  ContentPart.msg
src/potato_interface/srv/: GetOutputInfo.srv
src/potato_output/: CMakeLists.txt  package.xml
src/potato_output/src/: cmd_exec_node.cpp  file_edit_node.cpp  file_view_node.cpp  output_info_node.cpp
