<?xml version="1.0"?>
<package format="3">
  <name>potato_core</name>
  <version>0.1.0</version>
  <description>None</description>
  <maintainer email="zxy_yys_leaf@163.com">Leaf</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>potato_interface</depend>
  <depend>nlohmann_json</depend>
  <depend>libcurl-dev</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>