<?xml version="1.0"?>
<package format="3">
  <name>potato_output</name>
  <version>0.1.0</version>
  <description>Output management nodes for the Potato Agent</description>
  <maintainer email="zxy_yys_leaf@163.com">Leaf</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>std_msgs</depend>
  <depend>potato_interface</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>